--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.7",
     "moment": "^2.30.1",
